--- a/package.json
+++ b/package.json
@@ -3,39 +3,27 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"axios": "^0.18.0",
-		"bcrypt-nodejs": "0.0.3",
-		"body-parser": "^1.18.3",
-		"cors": "^2.8.4",
-		"enzyme": "^3.3.0",
-		"enzyme-adapter-react-16": "^1.5.0",
-		"express": "^4.16.3",
-		"jwt-simple": "^0.5.5",
-		"lodash": "^4.17.11",
-		"mongoose": "^5.3.0",
-		"morgan": "^1.9.1",
-		"passport": "^0.4.0",
-		"passport-jwt": "^4.0.0",
-		"passport-local": "^1.0.0",
-		"react-router": "^4.2.0",
-		"react-scripts": "1.1.4",
-		"redux-immutable-state-invariant": "^2.1.0",
-		"redux-thunk": "^2.2.0",
-		"reselect": "^3.0.1",
+		"async": "^2.6.1",
 		"autoprefixer": "7.1.6",
+		"axios": "^0.18.0",
 		"babel-core": "6.26.0",
 		"babel-eslint": "7.2.3",
 		"babel-jest": "20.0.3",
 		"babel-loader": "7.1.2",
 		"babel-preset-react-app": "^3.1.2",
 		"babel-runtime": "6.26.0",
+		"bcrypt-nodejs": "0.0.3",
+		"body-parser": "^1.18.3",
 		"bootstrap": "^4.1.3",
 		"case-sensitive-paths-webpack-plugin": "2.1.1",
 		"chalk": "1.1.3",
 		"classnames": "^2.2.6",
+		"cors": "^2.8.4",
 		"css-loader": "0.28.7",
 		"dotenv": "4.0.0",
 		"dotenv-expand": "4.2.0",
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.5.0",
 		"eslint": "4.10.0",
 		"eslint-config-react-app": "^2.1.0",
 		"eslint-loader": "1.9.0",
@@ -43,14 +31,24 @@
 		"eslint-plugin-import": "2.8.0",
 		"eslint-plugin-jsx-a11y": "5.1.1",
 		"eslint-plugin-react": "7.4.0",
+		"express": "^4.16.3",
 		"extract-text-webpack-plugin": "3.0.2",
+		"faker": "^4.1.0",
 		"file-loader": "1.1.5",
 		"fs-extra": "3.0.1",
 		"html-webpack-plugin": "2.29.0",
 		"jest": "20.0.4",
+		"jwt-simple": "^0.5.5",
+		"lodash": "^4.17.11",
 		"mdi-react": "^4.3.0",
+		"mongoosastic": "^4.4.1",
+		"mongoose": "^5.3.0",
+		"morgan": "^1.9.1",
 		"node-sass": "^4.9.3",
 		"object-assign": "4.1.1",
+		"passport": "^0.4.0",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
 		"postcss-flexbugs-fixes": "3.2.0",
 		"postcss-loader": "2.0.8",
 		"promise": "8.0.1",
@@ -61,11 +59,16 @@
 		"react-dom": "^16.5.2",
 		"react-hot-loader": "^4.3.8",
 		"react-redux": "^5.0.7",
+		"react-router": "^4.2.0",
 		"react-router-dom": "^4.3.1",
+		"react-scripts": "1.1.4",
 		"react-smooth-scrollbar": "^8.0.6",
 		"reactstrap": "^6.4.0",
 		"redux": "^4.0.0",
 		"redux-form": "^7.4.2",
+		"redux-immutable-state-invariant": "^2.1.0",
+		"redux-thunk": "^2.3.0",
+		"reselect": "^3.0.1",
 		"resolve": "1.6.0",
 		"sass-loader": "^7.1.0",
 		"smooth-scrollbar": "^8.3.1",
@@ -84,9 +87,16 @@
 		"test": "node scripts/test.js --env=jsdom"
 	},
 	"jest": {
-		"collectCoverageFrom": ["src/**/*.{js,jsx,mjs}"],
-		"setupFiles": ["<rootDir>/config/polyfills.js"],
-		"testMatch": ["<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}", "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"],
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx,mjs}"
+		],
+		"setupFiles": [
+			"<rootDir>/config/polyfills.js"
+		],
+		"testMatch": [
+			"<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+			"<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+		],
 		"testEnvironment": "node",
 		"testURL": "http://localhost",
 		"transform": {
@@ -94,14 +104,26 @@
 			"^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
 			"^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
 		},
-		"transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"],
+		"transformIgnorePatterns": [
+			"[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+		],
 		"moduleNameMapper": {
 			"^react-native$": "react-native-web"
 		},
-		"moduleFileExtensions": ["web.js", "js", "json", "web.jsx", "jsx", "node", "mjs"]
+		"moduleFileExtensions": [
+			"web.js",
+			"js",
+			"json",
+			"web.jsx",
+			"jsx",
+			"node",
+			"mjs"
+		]
 	},
 	"babel": {
-		"presets": ["react-app"]
+		"presets": [
+			"react-app"
+		]
 	},
 	"eslintConfig": {
 		"extends": "react-app"
